--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ div label[for=ui-component-toggle__yearly] {
 }
 
 .ui-component-list--item {
-  background-position: left center;
+  background-position:  center;
   background-repeat: no-repeat;
   background-size: 1.125rem;
   list-style: none;
@@ -387,7 +387,8 @@ div label[for=ui-component-toggle__yearly] {
 
 }
 
-.ui-section-header__layout { justify-content: space-between; }
+.ui-section-header__layout { 
+  justify-content: space-between; }
 
 /* LOGO */
 
@@ -475,6 +476,8 @@ object {
   opacity: 1;
   top: 0;
   visibility: visible;
+  transition: 0.3s ease;
+
 }
 
 .ui-section-header--nav-link {
@@ -1163,4 +1166,29 @@ div.p {
   
 }
 
+
+.scrollToTop-btn{
+  z-index: 999;
+  position: fixed;
+  background: #3a6cf4;
+  color: #ffffff;
+  width: 45px;
+  height: 45px;
+  right: 0;
+  bottom: 10px;
+  font-size: 22px;
+  text-align: center;
+  line-height: 45px;
+  border-radius: 3px;
+  cursor: pointer;
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.scrollToTop-btn.active{
+  right: 20px;
+  opacity: 1;
+  pointer-events: auto;
+}
 
